# als-dimmer

./: CMakeLists.txt  README.md  toolchain-pi4-aarch64.cmake
calibrations/: boe_i2c_pwm_2khz_reference.csv  boe_pwm_2khz_reference.csv  dimmer800.csv  dimmer_12_3_nq1v1.csv  dimmer_15_6_0od.csv  dimmer_15_6_0od_temp_nits_relation.csv  dimmer_15_6_0od_thermal_factor.csv  dimmer_15_6_rtk_hg560t34.csv  dimmer_2048.csv  dimmer_2048_temp_nits_relation.csv  dimmer_2048_thermal_factor.csv  dimmer_neutral.csv  dimmer_neutral_thermal_factor.csv
configs/: config_can_ddcutil.json  config_fpga_opti4001_ddcutil.json  config_fpga_opti4001_dimmer200.json  config_fpga_opti4001_dimmer2048.json  config_fpga_opti4001_dimmer2048_12_3_nq1v1.json  config_fpga_opti4001_dimmer2048_15_6_0od.json  config_fpga_opti4001_dimmer800.json  config_fpga_opti4001_lux_ddcutil.json  config_fpga_opti4001_lux_dimmer200.json  config_fpga_opti4001_lux_dimmer2048.json  config_fpga_opti4001_lux_dimmer2048_12_3_nq1v1.json  config_fpga_opti4001_lux_dimmer2048_15_6_0od.json  config_fpga_opti4001_lux_dimmer800.json  config_fpga_sysfs.json  config_invalid.json  config_opti4001_boe_i2c_pwm.json  config_opti4001_boe_i2c_pwm_secondary.json  config_opti4001_boepwm.json  config_opti4001_ddcutil.json  config_opti4001_ddcutil_rtk_hg560t34.json  config_opti4001_dimmer200.json  config_opti4001_dimmer800.json  config_responsive.json  config_simulation.json
docs/: CLAUDE.md  OPT4001_BUG_ANALYSIS.md  PHASE1_SUMMARY.md  PROGRESS.md  TESTING.md  fpga-opti4001-reader-improvement-plan.md  opti4001-i2c-access.md
docs/latex/: Makefile
docs/latex/src/: 01-introduction.tex  02-environments.tex  03-human-vision.tex  04-zone-mapping.tex  05-curves.tex  06-response-time.tex  07-architecture.tex  08-components.tex  09-zone-controller.tex  10-json-config.tex  11-control-interface.tex  12-deployment.tex  13-summary.tex  als-dimmer-spec.tex  appendices.tex
include/als-dimmer/: brightness_controller.hpp  brightness_to_nits_lut.hpp  config.hpp  control_interface.hpp  csv_logger.hpp  interfaces.hpp  json_protocol.hpp  logger.hpp  notifier.hpp  state_manager.hpp  thermal_compensation.hpp  wp_adjust_restore.hpp  zone_mapper.hpp
include/als-dimmer/outputs/: boe_pwm_output.hpp  i2c_dimmer_output.hpp  i2c_pwm_output.hpp
include/als-dimmer/sensors/: can_als_sensor.hpp  null_sensor.hpp
src/: brightness_controller.cpp  brightness_to_nits_lut.cpp  config.cpp  control_interface.cpp  csv_logger.cpp  json_protocol.cpp  main.cpp  notifier.cpp  state_manager.cpp  thermal_compensation.cpp  wp_adjust_restore.cpp  zone_mapper.cpp
src/outputs/: boe_pwm_output.cpp  ddcutil_output.cpp  file_output.cpp  fpga_sysfs_output.cpp  i2c_dimmer_output.cpp  i2c_pwm_output.cpp
src/sensors/: can_als_sensor.cpp  file_sensor.cpp  fpga_opti4001_lux_sensor.cpp  fpga_opti4001_sensor.cpp  fpga_opti4001_sysfs_sensor.cpp  opti4001_sensor.cpp
systemd/: als-dimmer-pwm.service.in  als-dimmer.service.in
tools/: README.md  als-dimmer-auto-test.sh  als-dimmer-client.cpp  als-dimmer-sweep.py  als_test.csv  blend-calibrations.py  test_bcd_encoding.cpp  thermal-factor.py  visualize_csv.py
